# MetalHeatEquation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/config/: CMakeLists.txt  force.hpp  initial_condition.hpp  parameters.txt
src/core/: CMakeLists.txt  force_parser.cpp  force_parser.hpp  function_parser.hpp  heat_equation.cpp  heat_equation.hpp  metal_heat_equation.cpp  metal_heat_equation.hpp  shader_loader.cpp  shader_loader.hpp  solution.cpp  solution.hpp
src/core/shaders/: common.metal  heat_equation.metal  initialization.metal  reduce.metal  variation.metal
src/utils/: CMakeLists.txt  metal_device_info.hpp  parameters.hpp  timer.hpp
tests/: metal_heat_equation.cpp  metal_heat_equation.hpp
